--- a/home/2_GUCCI/assets/css/index.css
+++ b/home/2_GUCCI/assets/css/index.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic|Noto+Sans+KR:100,300,400,500,700,900|Poiret+One|Quattrocento+Sans&display=swap");
 body {
+  font-family: Futura,"Helvetica","Arial",sans-serif;
   font-size: 11px;
 }
 
@@ -29,7 +29,7 @@ em {
 
 .index .visual {
   position: relative;
-  height: 465px;
+  height: 533px;
   background: pink;
 }
 
@@ -65,6 +65,7 @@ em {
   color: #f2f2f2;
   margin-top: 30px;
   text-align: center;
+  font-weight: 100;
 }
 
 .index .visual .slide .contents h2 {
@@ -77,7 +78,7 @@ em {
 }
 
 .index .visual .slide .contents .view-btn {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .index .visual .slide .contents .view-btn button {
@@ -104,10 +105,6 @@ em {
   background-image: url(../img/HeroBigStandard_3200x1520/HeroBigStandard_S93-FS-ADV-18_001_Default.jpg);
 }
 
-.index .visual .s4 {
-  background-image: url(../img/HeroBigStandard_3200x1520/HeroBigStandard_S01-FS-Creativita-01-up_001_Default.jpg);
-}
-
 .index .visual .indicator {
   position: absolute;
   top: auto;
@@ -119,10 +116,12 @@ em {
 }
 
 .index .visual .indicator li {
+  position: relative;
   float: left;
   width: 12px;
   height: 12px;
   border-radius: 6px;
+  cursor: pointer;
 }
 
 .index .visual .indicator li:hover {
@@ -133,11 +132,20 @@ em {
   border: 1px solid #f2f2f2;
 }
 
+.index .visual .indicator li.on a {
+  width: 0px;
+  height: 0px;
+}
+
 .index .visual .indicator li > a {
   position: absolute;
+  top: 3px;
+  left: 3px;
+  right: auto;
+  bottom: auto;
   display: block;
-  width: 6px;
-  height: 6px;
+  width: 4px;
+  height: 4px;
   background: #f2f2f2;
   border-radius: 3px;
 }
@@ -155,7 +163,6 @@ em {
 
 .index .visual .slide-btns .prev-btn img, .index .visual .slide-btns .next-btn img {
   width: 40px;
-  background: #f2f2f2;
 }
 
 .index .visual .slide-btns .prev-btn {
@@ -185,7 +192,7 @@ em {
   right: auto;
   bottom: auto;
   width: 100%;
-  height: 120px;
+  height: 100px;
   padding-top: 25px;
   -webkit-box-shadow: inset 0px 60px 50px -20px rgba(0, 0, 0, 0.8);
           box-shadow: inset 0px 60px 50px -20px rgba(0, 0, 0, 0.8);
@@ -213,6 +220,14 @@ em {
   background: pink;
 }
 
+.index header h1 {
+  text-align: center;
+  color: #f2f2f2;
+  font-size: 28px;
+  font-weight: 400;
+  letter-spacing: 15px;
+}
+
 .index header .user-info {
   position: absolute;
   top: 25px;
@@ -230,6 +245,7 @@ em {
 }
 
 .index header #nation-info > li > div, .index header .user-info > li > div {
+  display: none;
   position: absolute;
 }
 
@@ -280,6 +296,106 @@ em {
   font-size: 15px;
 }
 
+.index .gnb {
+  font-size: 12px;
+}
+
+.index .gnb > ul {
+  position: relative;
+  text-align: center;
+}
+
+.index .gnb > ul > li {
+  display: inline-block;
+  margin: 17px;
+}
+
+.index .gnb > ul > li > a {
+  color: rgba(242, 242, 242, 0.8);
+}
+
+.index .gnb > ul > li > a:hover {
+  color: #f2f2f2;
+}
+
+.index .gnb > ul > li > ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  right: 0%;
+  bottom: auto;
+  margin: 0px 16px;
+  background: rgba(255, 255, 255, 0.95);
+  height: auto;
+  padding: 26px 120px 55px;
+  overflow: hidden;
+}
+
+.index .gnb > ul > li > ul.on {
+  display: block;
+}
+
+.index .gnb > ul > li > ul li {
+  text-align: left;
+}
+
+.index .gnb > ul > li > ul > li + li:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: auto;
+  bottom: auto;
+  width: 1px;
+  height: 230px;
+  background: #e7e7e7;
+}
+
+.index .gnb > ul > li > ul > li {
+  position: relative;
+  float: left;
+  margin: 0px auto;
+  padding: 0px 35px;
+}
+
+.index .gnb > ul > li > ul > li a {
+  font-size: 12px;
+}
+
+.index .gnb > ul > li > ul > li > a {
+  color: #313131;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.index .gnb > ul > li > ul > li > ul {
+  margin-top: 5px;
+}
+
+.index .gnb > ul > li > ul > li > ul > li {
+  margin-top: 16px;
+}
+
+.index .gnb > ul > li > ul > li > ul > li a {
+  color: rgba(49, 49, 49, 0.7);
+  font-weight: 400;
+}
+
+.index .gnb > ul > li > ul > li > ul > li:hover a {
+  color: #313131;
+}
+
+.index .gnb > ul > li > ul .slide {
+  background: red;
+  width: 235px;
+}
+
+.index .gnb > ul > li .menu-style-WM {
+  background: red;
+}
+
 .text-ir {
   width: 0px;
   height: 0px;
@@ -293,17 +409,5 @@ em {
   width: 0px;
   height: 0px;
   font-size: 0px;
-}
-
-.NanumGothic {
-  font-family: 'Nanum Gothic', sans-serif;
-}
-
-.Quattrocento {
-  font-family: 'Quattrocento Sans', sans-serif;
-}
-
-.PoiretOne {
-  font-family: 'Poiret One', cursive;
 }
 /*# sourceMappingURL=index.css.map */
