--- a/home/2_GUCCI/assets/css/index.css
+++ b/home/2_GUCCI/assets/css/index.css
@@ -194,8 +194,8 @@ em {
   width: 100%;
   height: 100px;
   padding-top: 25px;
-  -webkit-box-shadow: inset 0px 60px 50px -20px rgba(0, 0, 0, 0.8);
-          box-shadow: inset 0px 60px 50px -20px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: inset 0px 70px 100px -30px rgba(0, 0, 0, 0.8);
+          box-shadow: inset 0px 70px 100px -30px rgba(0, 0, 0, 0.8);
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
@@ -384,6 +384,10 @@ em {
   margin-top: 5px;
 }
 
+.index .gnb > ul > li > ul > li > ul > li:first-child {
+  margin-top: 22px;
+}
+
 .index .gnb > ul > li > ul > li > ul > li {
   margin-top: 16px;
 }
@@ -446,26 +450,6 @@ em {
 .index .gnb > ul > li > ul .fashion-show figure .slide .slide-wrap a img {
   width: 100%;
   height: 100%;
-}
-
-.index .gnb > ul > li > ul .fashion-show figure .slide .slide-wrap a em {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: auto;
-  right: auto;
-  bottom: auto;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-  width: 100%;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-}
-
-.index .gnb > ul > li > ul .fashion-show figure .slide .slide-wrap a em span {
-  font-weight: normal;
 }
 
 .index .gnb > ul > li > ul .fashion-show figure #indicator {
@@ -568,6 +552,129 @@ em {
 
 .index .gnb > ul > li .menu-style-WM > li > div > ul li:hover a {
   color: #313131;
+}
+
+.index .gnb > ul > li .wide-list > li {
+  padding: 0px 65px;
+}
+
+.index .gnb > ul > li .wide-list .details div {
+  margin-top: 40px;
+}
+
+.index .gnb > ul > li .col-list .col4 > a {
+  display: block;
+  margin-bottom: 22px;
+}
+
+.index .gnb > ul > li .col-list .col4 ul {
+  -webkit-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+}
+
+.index .gnb > ul > li .col-list .col4 ul li:first-child {
+  margin-top: 0px;
+}
+
+.index .gnb > ul > li .col-list .col2 > a {
+  display: block;
+  margin-bottom: 26px;
+}
+
+.index .gnb > ul > li .col-list .col2 ul {
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+}
+
+.index .gnb > ul > li .col-list .col2 ul li:first-child {
+  margin-top: 0px;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul {
+  -webkit-column-gap: 14px;
+          column-gap: 14px;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li + li {
+  margin-top: 10px;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li > a {
+  display: block;
+  height: 80px;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li > a img {
+  height: 100%;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li > a div {
+  display: inline-block;
+  width: 120px;
+  padding-left: 12px;
+  vertical-align: top;
+  font-size: 11px;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li > a div em, .index .gnb > ul > li .gucci-story .recently-info > ul > li > a div span {
+  word-break: break-all;
+}
+
+.index .gnb > ul > li .gucci-story .recently-info > ul > li > a div em {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 12px;
+}
+
+.index .gnb > ul > li .details > div {
+  position: relative;
+  margin-top: 22px;
+}
+
+.index .gnb > ul .no-border-all-list > li + li:before {
+  width: 0px;
+  height: 0px;
+}
+
+.index .gnb > ul .no-border:before {
+  width: 0px;
+  height: 0px;
+}
+
+.index .gnb > ul .slide-inside-text {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: auto;
+  right: auto;
+  bottom: auto;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+  width: 100%;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.index .gnb > ul .slide-inside-text span {
+  font-weight: normal;
+}
+
+.index .gnb > ul .details div a {
+  position: relative;
+  display: block;
+  width: 350px;
+  height: 154px;
+}
+
+.index .gnb > ul .details div a img {
+  width: 100%;
+  height: 100%;
 }
 
 .text-ir {
